kustomize/overlay/dev/iwiick-proj-1-dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-1-dev
  labels:
    environment-id: env_27a6d32d-fe88-4433-bffe-5d8e7a3d8e10
    project-id: project_c246f36d-fdcb-480a-ba8e-56bcfe419dc0
    project-name: iwiick-proj-1
    environment-name: dev
    organization-id: org_127c0816-35d9-462f-bd10-70fe8dce602c
