kustomize/overlay/dev/iwiick-proj-2-dev-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iwiick-proj-2-dev
  labels:
    environment-id: env_b014dc10-60f4-4478-9fcb-ff41438e4f03
    project-id: project_96d4f08c-7343-469c-b00b-2ec2c3f74234
    project-name: iwiick-proj-2
    environment-name: dev
    organization-id: org_127c0816-35d9-462f-bd10-70fe8dce602c
