kustomize/overlay/dev/iwiick-proj-1-dev-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: iwiick-proj-1-dev
  labels:
    organizationId: org_d2ea4601-f582-4e43-921d-6a60eea704b3
    projectId: project_f25ad2e4-cf21-410c-b7fb-a8adad864a23
    environmentId: env_3f34e2e8-6902-4eee-a0bb-281989189458
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_3f34e2e8-6902-4eee-a0bb-281989189458
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
